crux-llvm/test-data/golden/libpng-cve-2018-13785.z3.good
[Crux] Counterexample found, skipping remaining goals
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/libpng-cve-2018-13785.c:173:26: error: in png_check_chunk_length
[Crux]   Undefined behavior encountered
[Crux]   Details:
[Crux]     Poison value created
[Crux]     Signed multiplication caused wrapping even though the `nsw` flag was set
[Crux] Overall status: Invalid.
